# learning-management-system

./: .dockerignore  .env.example  .gitignore  .project_modules.txt  Dockerfile  Issues.txt  LICENSE  Makefile  README.md  alembic.ini  claude-output-216.md  codex-prompt-217.md  docker-compose.yml  file::memory:  pyproject.toml  render.yaml  workloop-state.md
.agents/: issue-365-ledger.yml
.github/codex/: AGENT_INSTRUCTIONS.md  PROJECT_CONTEXT.md
.github/scripts/: README.md
.github/workflows/: agents-80-pr-event-hub.yml  agents-81-gate-followups.yml  agents-auto-label.yml  agents-auto-pilot.yml  agents-capability-check.yml  agents-decompose.yml  agents-dedup.yml  agents-issue-optimizer.yml  agents-verify-to-new-pr.yml  agents-weekly-metrics.yml  backplane-conformance.yml  ci.yml  compose-smoke.yml  cross-repo-smoke.yml  maint-76-claude-code-review.yml  maint-sync-workflows.yml  pr-00-gate.yml
alembic/: env.py
alembic/versions/: 20260525_0001_baseline.py  20260525_0002_audit_events.py  20260525_0002_user_learner.py  20260525_0003_audit_events.py  20260525_0004_source_references.py  20260525_0005_knowledge_graph.py  20260525_0006_attempts.py  20260525_0006_learning_goals.py  20260525_0007_evidence_records.py  20260525_0007_merge_heads.py  20260525_0007_prompts.py  20260525_0008_evidence_records.py  20260525_0009_evidence_record_timestamp.py  20260525_0009_llm_sessions.py  20260525_0010_llm_sessions.py  20260525_0011_review_queue_items.py  20260525_0012_llm_proposals.py  20260525_0013_llm_learner_controls.py  20260525_0014_scheduler_records.py  20260525_0015_feedback_records.py  20260526_0015_review_policy_active_unique.py  20260526_0016_rubrics.py  20260526_0017_rubric_scores.py  20260526_0018_competencies.py  20260526_0019_capability_targets.py  20260526_0020_capability_estimates.py  20260526_0020_transfer_cases.py  20260526_0021_gap_analyses.py  20260526_0022_gap_analysis_scope_constraint_cleanup.py  20260526_0022_remediation_triggers.py  20260526_0023_maintenance_plans.py  20260526_0024_feedback_templates.py  20260526_0025_hints_model_answers.py  20260526_0026_revision_requests.py  20260527_0026_llm_feedback_events.py  20260527_0027_case_work_products.py  20260527_0027_merge_revision_requests_llm_feedback_events.py  20260530_0028_user_password_hash.py  20260531_0029_learner_reflections.py  20260617_0030_evidence_scorer_typed_columns.py
config/: coverage-baseline.json
docs/: KEEPALIVE_TROUBLESHOOTING.md  README.md  SETUP_CHECKLIST.md  baseline-kit-dependency.md  project-review-brief.md
docs/architecture/: README.md  auth.md  security-assumptions.md
docs/audits/: 2026-05-30-comprehensive-audit.findings.json  2026-05-30-comprehensive-audit.md
docs/automation/: workflows-consumer-setup.md
docs/development/: audit-log.md  backend-setup.md  deployment.md  local-checks.md  local-setup.md  mastery-cache.md  web-prototype.md
docs/handoff/: codex-design-review-brief.md  codex-design-review-round2-brief.md  codex-phase2-brief.md  codex-phase3-brief.md  demo-retention-protocol.md  m6-acceptance-gate.md  minimum-demo-coverage.md  phase1-codex-findings.json  phase1-codex-round2-findings.json  phase1-convergence-report.md  phase2-codex-issue-candidates.json  phase2-convergence-report.md  phase2-issue-number-mapping.json  phase3-codex-issue-candidates.json  phase3-convergence-report.md  phase3-issue-number-mapping.json
docs/importers/: csv-graph-format.md
docs/llm/: PROVIDER_LIVE_VERIFICATION.md
docs/product/: development-testing-surfaces.md  early-design-decisions.md  project-plan.md  research-domain-model.md
docs/reports/: baseline-coverage.md
docs/research/: learning-principles.md  references.md
docs/screenshots/: m6-admin.html  m6-attempt-flow.html  m6-author-cases.html  m6-author-feedback-templates.html  m6-author-goals.html  m6-author-graph.html  m6-author-home.html  m6-author-knowledge.html  m6-author-prompts.html  m6-author-rubrics.html  m6-capability-gap.html  m6-feedback-detail.html  m6-feedback.html  m6-learn-attempt.html  m6-learner-dashboard.html  m6-llm-study.html  m6-review-queue.html  m6-support.html
docs/ux-review/: REVIEW_LOG.md
scripts/: compose_smoke.sh  sync_dev_dependencies.py  validate_dependency_test_setup.py  verify_agent_issue_create.py  verify_consumer_template_diff.py  verify_repo_variable.py
scripts/langchain/: capability_check.py  followup_issue_generator.py  integration_layer.py  issue_dedup.py  label_matcher.py
src/lms/: __init__.py  __main__.py  demo.py  demo_seed.py  export_import.py  main.py  settings.py
src/lms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/my_project/: __init__.py  main.py
src/my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_cli_entrypoint.py  test_compose_smoke.py  test_compose_smoke_gate_workflow.py  test_database_baseline.py  test_dependency_version_alignment.py  test_main.py  test_makefile_targets.py  test_pyproject_config.py
tests/analytics/: test_calibration.py
tests/api/: test_audit.py  test_auth_learners.py  test_capability_estimates.py  test_capability_targets.py  test_case_work_products.py  test_cases.py  test_competencies.py  test_feedback.py  test_feedback_http_errors.py  test_feedback_templates.py  test_gap_analyses.py  test_health.py  test_hints_model_answers.py  test_knowledge_graph.py  test_maintenance_plans.py  test_rubric_scores.py  test_rubrics.py  test_source_references.py
tests/audit/: __init__.py  test_audit_log.py
tests/auth/: test_app_auth_gate.py  test_auth_cli.py  test_authenticated_session.py  test_login.py  test_passwords.py  test_users.py
tests/baseline/: README.md  __init__.py  adapter.py  catalog.yaml  conftest.py  invariants.py  test_coverage_manifest.py  test_directional.py  test_golden.py  test_invariants.py
tests/capability/: test_capability_estimates.py  test_capability_targets.py  test_gap_analysis.py  test_maintenance_plans.py  test_repository.py
tests/cases/: test_cases.py  (+1 more)
tools/: langchain_client.py  requirements-llm.txt  resolve_mypy_pin.py
(+243 files in other folders)
