[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lms"
version = "0.1.0"
description = "API-first Learning Management System backend"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "stranske", email = "tim@stranskemo.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.14.1",
    "PyYAML>=6.0.0",
    "sqlalchemy>=2.0.50",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.3.4",
    "uvicorn[standard]>=0.48.0",
    "pandas>=3.0.3",
    "mistune>=3.0.0",
]

[project.scripts]
lms = "lms.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "httpx>=0.28.1",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    "black==26.3.1",
    "jupyter>=1.1.1",
    "types-PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/stranske/learning-management-system"
Repository = "https://github.com/stranske/learning-management-system"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=lms --cov=my_project --cov-report=term-missing --cov-report=xml"
pythonpath = ["src"]

[tool.coverage.run]
source = ["lms", "my_project"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lms", "my_project", "tools"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "scripts"]
mypy_path = ["src"]
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.black]
line-length = 100
# Target only the minimum supported Python (3.12).  Black's AST safety check
# cannot parse py313 syntax when the runner is on Python 3.12, so listing both
# versions produces a warning on the 3.12 CI leg.  Code formatted for py312 is
# valid on py313, so a single entry correctly covers both supported versions.
target-version = ["py312"]

[[tool.mypy.overrides]]
# lms.analytics will use pandas, which ships incomplete stubs.  Keep strict
# everywhere else and loosen only this namespace as needed during M3 work.
module = ["lms.analytics.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# lms.llm will integrate third-party LLM SDKs whose stubs may lag the library.
# Re-tighten once SDK stubs stabilise or we add a py.typed marker to our shim.
module = ["lms.llm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# mistune does not ship a py.typed marker; keep the markdown importer typed
# internally while ignoring the third-party package boundary.
module = ["mistune"]
ignore_missing_imports = true
