[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lms"
version = "0.1.0"
description = "API-first Learning Management System backend"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "stranske", email = "tim@stranskemo.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.14.1",
    "PyYAML>=6.0.3",
    "sqlalchemy>=2.0.50",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
    "uvicorn[standard]>=0.48.0",
    "pandas>=3.0.3",
    "mistune>=3.2.1",
    # Argon2 powers password hashing for the local login flow that gates the
    # deployed Render instance (see docs/architecture/auth.md). Required for
    # any environment where AUTH_REQUIRED is enabled.
    "argon2-cffi>=25.1.0",
    # starlette is FastAPI's underlying ASGI framework; we import SessionMiddleware
    # directly so it is declared as an explicit dependency.
    "starlette>=1.2.1,<2.0.0",
    # itsdangerous is the signed-cookie library Starlette's SessionMiddleware
    # uses under the hood; declaring it explicitly keeps the dependency surface
    # visible even though Starlette ships it transitively today.
    "itsdangerous>=2.2.0",
    # python-multipart is required by FastAPI for parsing form posts (the
    # /login endpoint uses Form()). FastAPI declares it as an optional extra;
    # we depend on it directly so the form-based login works out of the box.
    "python-multipart>=0.0.20",
    # Anthropic Python SDK powers the live LLM provider adapter
    # (src/lms/llm/providers.py::AnthropicProvider). The adapter loads the
    # SDK lazily so unit tests can run without an API key; the dependency
    # is here so deployments that DO have CLAUDE_API_STRANSKE configured can
    # call the real Messages API without an extra install step.
    "anthropic>=0.105.2",
]

[project.scripts]
lms = "lms.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "httpx>=0.28.1",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "black>=26.5.1",
    "jupyter>=1.1.1",
    "types-PyYAML>=6.0.12.20260518",
    # Shared app behavior baseline harness (tests/baseline). Pulls
    # pytest-regressions, whose num_regression fixture needs numpy + pandas --
    # both already core LMS dependencies. Tracked as a git direct reference
    # unpinned at @main (Pattern A) and excluded from requirements.lock via
    # [tool.uv.pip] no-emit-package below. Freezing a commit SHA in the lock
    # while pyproject points at @main reintroduces uv's "conflicting URLs for
    # package `app-baseline-kit`" error the moment Workflows main advances;
    # no-emit avoids that conflict class permanently (see
    # docs/baseline-kit-dependency.md).
    "app-baseline-kit @ git+https://github.com/stranske/Workflows.git#subdirectory=packages/app-baseline-kit",
    "pytest-regressions==2.11.0",
]
# Deferred visual/accessibility harness. Not installed in CI: the required M6
# smoke layer is the browser-free HTML snapshot suite in
# tests/ui/test_m6_screenshots.py. Activate Playwright with
# ``pip install -e '.[visual]' && playwright install`` and PLAYWRIGHT_AVAILABLE=1
# when a later milestone justifies it (see docs/development/web-prototype.md).
visual = [
    "playwright>=1.60.0",
    "pytest-playwright>=0.8.0",
]

# Do not emit app-baseline-kit into requirements.lock (Pattern A). It is
# consumed from the Workflows monorepo via an unpinned `@main` git URL (see
# [project.optional-dependencies].dev), so freezing a commit SHA in the lock
# conflicts with that URL the moment Workflows main advances ("conflicting URLs
# for package app-baseline-kit" -> uv install aborts). Leaving it unpinned lets
# the editable project install resolve it from main, with no lock to keep
# refreshed. See docs/baseline-kit-dependency.md.
[tool.uv.pip]
no-emit-package = ["app-baseline-kit"]

[project.urls]
Homepage = "https://github.com/stranske/learning-management-system"
Repository = "https://github.com/stranske/learning-management-system"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lms.ui.static" = ["*.css", "*.js", "*.webmanifest", "icons/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=lms --cov-report=term-missing --cov-report=xml"
pythonpath = ["src"]
markers = [
    "slow: integration-style tests excluded from default keepalive verification lanes",
]

[tool.coverage.run]
source = ["lms"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lms", "tools"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "scripts"]
mypy_path = ["src"]
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.black]
line-length = 100
# Target only the minimum supported Python (3.12).  Black's AST safety check
# cannot parse py313 syntax when the runner is on Python 3.12, so listing both
# versions produces a warning on the 3.12 CI leg.  Code formatted for py312 is
# valid on py313, so a single entry correctly covers both supported versions.
target-version = ["py312"]

[[tool.mypy.overrides]]
# lms.analytics will use pandas, which ships incomplete stubs.  Keep strict
# everywhere else and loosen only this namespace as needed during M3 work.
module = ["lms.analytics.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# lms.llm will integrate third-party LLM SDKs whose stubs may lag the library.
# Re-tighten once SDK stubs stabilise or we add a py.typed marker to our shim.
module = ["lms.llm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# mistune does not ship a py.typed marker; keep the markdown importer typed
# internally while ignoring the third-party package boundary.
module = ["mistune"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# playwright is the deferred [visual] optional dependency and is not installed
# in CI. The smoke scaffold imports it lazily inside a skipped-by-default test;
# ignore the missing import so the browser-free suite stays type-clean.
module = ["playwright.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# anthropic powers the live LLM provider in src/lms/llm/providers.py. The SDK
# is imported lazily inside AnthropicProvider._build_client so tests can run
# without it installed; ignore the missing import so dev environments without
# the wheel still type-check cleanly.
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# app-baseline-kit ships py.typed, but it is installed as a git/editable
# direct reference; mypy in some environments cannot resolve the package's
# implementation. The baseline harness (tests/baseline) only consumes its
# thin public API, so ignore the missing import rather than vendoring stubs.
module = ["baseline_kit", "baseline_kit.*"]
ignore_missing_imports = true
